Fix z-index issue and style modal background.

--- a/library.css
+++ b/library.css
@@ -26,6 +26,7 @@ body
     --btn-box-shadow: 3px 3px 3px #a7adb3;
     --header-box-shadow: 0px 3px 3px #a7adb3;
     --backdrop-img: url(./img/backdrop-light);
+    --modal-actual-background:rgba(228,228,249,.6);
 }
 
 body.dark
@@ -61,17 +62,14 @@ body.dark
     position:fixed;
     width:100vw;
     height:100vh;
-    /* top: 25vh;
-    left:calc(50vw - 150px);
-    width:300px;
-    border: 2px solid black;
-    background-color: var(--navbar); */
+    background-color: var(--modal-actual-background);
 }
 .modal-close
 {
     align-self: flex-end;
     padding:10px;
     cursor: pointer;
+
 }
 .modal-content
 {
@@ -85,6 +83,7 @@ body.dark
     top:25vh;
     left:calc(50vw - 150px);
     border: 2px solid black;
+    z-index: 3;
 }
 .modal-content form
 {
@@ -93,6 +92,7 @@ body.dark
     align-items: center;
     justify-content: space-between;
     padding:20px;
+    z-index: 3;
 }
 .modal-content input
 {
